@@ -1,5 +1,5 @@
 === Opus Primus changelog.txt ===
-Last revised June 9, 2014
+Last revised June 14, 2014
 Please note, the Opus Primus copyright can be found at the end of this file.
 
 == Version 1.2.5 ==
@@ -12,6 +12,7 @@ Please note, the Opus Primus copyright can be found at the end of this file.
 * Enqueue custom stylesheets in a more upgrade safe location `/wp-content/opus-primus-customs/`
 
 = CSS =
+* Corrected `select` element to use "max-width" rather than "width"
 * Complete refactoring of the styles for better responsiveness
 * Fixed white space on right side of iPhone displays
 * Monster be gone! - Fixed special case many level menu in sidebar
